--- a/Assn2_Jeevan_Jayakumar_24_14_13.ipynb
+++ b/Assn2_Jeevan_Jayakumar_24_14_13.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JeevanJayakumar/Jeevan_24-14-13/blob/main/Assn2_Jeevan_Jayakumar_24_14_13.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Assignment 2\n",
         "\n",
@@ -702,7 +712,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyN8fHBPoMtnOOj7yGQ5qix1",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
