uploaded github link

--- a/Assn2_Jeevan_Jayakumar_24_14_13.ipynb
+++ b/Assn2_Jeevan_Jayakumar_24_14_13.ipynb
@@ -51,7 +51,8 @@
       "execution_count": 102,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "9FLrnYE7Z5yj",
         "outputId": "9a44eef7-6f97-419d-dfaa-78cc7b0385aa"
@@ -83,7 +84,8 @@
       "execution_count": 103,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "uUblkYCmZ_b_",
         "outputId": "ccbe1575-52a7-4342-9b36-ce5c5974e6a6"
@@ -123,7 +125,8 @@
       "execution_count": 104,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "KUsdG5bEdqCb",
         "outputId": "b53a5700-5c33-46f9-cf11-b420cf1f3b3e"
@@ -173,7 +176,8 @@
       "metadata": {
         "id": "barIGag4eYq3",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "526da411-87f4-4d3b-d424-5fb29afb060b"
       },
@@ -240,7 +244,8 @@
       "execution_count": 106,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "yYx5ZwTggBVX",
         "outputId": "13ad3707-5430-4f5d-c74e-d2147b8cfd3f"
@@ -288,7 +293,8 @@
       "execution_count": 107,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DpCmoucHi0Da",
         "outputId": "fe08bc83-e8ba-4135-df80-40cf60e10789"
@@ -331,7 +337,8 @@
       "execution_count": 108,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "gQXDSSxSkyjh",
         "outputId": "ba7a573c-ca87-4ce2-9405-8c168582db2d"
@@ -361,7 +368,8 @@
       "execution_count": 109,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "VCCOIcQ7lDeu",
         "outputId": "3b4a2b9c-65cd-4b3e-92dd-294ae7b4b709"
@@ -399,7 +407,8 @@
       "execution_count": 110,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "nyx2tbyilVbP",
         "outputId": "0b3a3fd0-5035-4db9-8180-c66227a1fb92"
@@ -479,7 +488,8 @@
       "execution_count": 111,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3S5TnYY3luZx",
         "outputId": "9ff965d6-1d6b-4bb9-d9ad-ddda4a420ebb"
@@ -512,7 +522,8 @@
       "metadata": {
         "id": "ZP4HowfSlxWR",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "d340cf91-4c7d-4f1f-961b-fed21d0b4827"
       },
@@ -573,7 +584,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4Zi-NQc6nIfo",
         "outputId": "70877d1a-b9d8-4673-e136-c087f481d92c"
@@ -637,7 +649,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "0LSOTplmbHnH",
         "outputId": "6e453393-2561-42d0-921b-71163f191d37"
@@ -666,7 +679,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Fx-sFXwfnf3-",
         "outputId": "22e37951-a19d-4fca-9811-56dfd410f7b1"
@@ -693,7 +707,8 @@
       "metadata": {
         "id": "PaV02AKUbd74",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "33a0ff0d-650e-4005-febf-df274c86959d"
       },
@@ -708,12 +723,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/JeevanJayakumar/Jeevan_24-14-13/blob/main/Assn2_Jeevan_Jayakumar_24_14_13.ipynb\n"
+      ],
+      "metadata": {
+        "id": "swkVEccczVlU"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8fHBPoMtnOOj7yGQ5qix1",
+      "authorship_tag": "ABX9TyNSo8vQJ9AqICEv3W/sMoTH",
       "include_colab_link": true
     },
     "kernelspec": {
